# asserter

./: .gitignore  CMakeLists.txt  README.md  def.json  package-lock.json  package.json
.github/workflows/: verify_failure.yml
src/: archiver.h  archiver.hpp  archiver.hxx  asserter.cpp  asserter.h  asserter.hpp  asserter.hxx
test/: CMakeLists.txt  build_and_run  em_build_and_run
test/src/: check_assert.cpp
